@@ -6,6 +6,8 @@ XConsole and top.desktop removed
 old build system removed
 code cleanup
 pgrep and pkill get "-o" (oldest matching process)
+had vmstat "bi" and "bo" output interchanged on 2.5.xx
+fix man page tbl directives
 
 procps-3.0.3 --> procps-3.0.4
 
